# vttLib

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
src/vttLib/: __init__.py  __main__.py  parser.py  transfer.py  vttdump.py
tests/: cli_test.py  conftest.py  data_transfer_test.py  vttLib_test.py
tests/data/: NotoSans-MM-ASCII-VF-VTT.ttx  NotoSans-MM-ASCII-VF.ttx  NotoSans-MM-ASCII-VF_diff_TSIC.ttx  NotoSans-MM-ASCII-VF_wrong_maxp.ttx  fdef133.txt  fdef133_transformed.txt  fdef152.txt  fdef152_transformed.txt  fdef153.txt  fdef153_transformed.txt  fdef83.txt  fdef83_transformed.txt  idef145.txt  idef145_transformed.txt  pushoff_pushes.txt  pushoff_pushes_transformed.txt
tests/data/UbuTestData.ufo/: fontinfo.plist
tests/data/UbuTestData.ufo/data/com.github.fonttools.ttx/: T_S_I__5.ttx
tests/data/UbuTestData.ufo/glyphs/: contents.plist
