[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]

[project]
name = "vttLib"
authors = [{ name = "Dalton Maag Ltd", email = "info@daltonmaag.com" }]
description = "Compile Visual TrueType assembly with FontTools."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "fonttools[ufo]>=4.0.0",
    "pyparsing>=2.1.5",
    "ufoLib2>=0.7.1",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/daltonmaag/vttLib"

[tool.setuptools_scm]
write_to = "src/vttLib/_version.py"

[tool.black]
target-version = ["py37"]

[tool.isort]
profile = "black"
known_first_party = "vttLib"
