[metadata]
name = vttLib
author = Dalton Maag Ltd
author_email = info@daltonmaag.com
home-page = https://github.com/daltonmaag/vttLib
description = Compile Visual TrueType assembly with FontTools.
license = MIT

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
  	fonttools[ufo]>=3.44.0
  	pyparsing>=2.1.5
	ufoLib2
setup_requires =
	setuptools_scm
	wheel
tests_require =
	pytest
	ufo2ft

[options.packages.find]
where=src

[sdist]
formats = zip

[tool:pytest]
filterwarnings =
  	ignore:fromstring:DeprecationWarning
	ignore:tostring:DeprecationWarning
