[metadata]
name = vttLib
author = Dalton Maag Ltd
author_email = info@daltonmaag.com
home-page = https://github.com/daltonmaag/vttLib
description = Compile Visual TrueType assembly with FontTools.
license = MIT

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    fonttools[ufo]>=4.0.0
    pyparsing>=2.1.5
    ufoLib2>=0.7.1
setup_requires =
    setuptools_scm[toml]>=3.4
    wheel

[options.packages.find]
where=src

[sdist]
formats = zip
